<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AtCMUA</string>
    
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="atcmua_login">Login</string>
    
    <string name="tab_feed">Feed</string>
    <string name="tab_contacts">Contacts</string>
    <string name="tab_info">Info</string>
    
    <string name="storage_feeds">feeds</string>
    
    <string name="action_logout">Logout</string>
    
    <string name="about_me">About me</string>
    <string name="description_content">Description</string>
    <string name="email_content">Email</string>
    <string name="telephone_content">Telephone</string>
    <string name="mobile_content">Mobile</string>
    <string name="location_content">Location</string>
    <string name="interests_content">Interests</string>
    <string name="skills_content">Skills</string>
    <string name="twitter_content">Twitter</string>
    
     <string name="search_title">Search Title</string>
    

</resources>
