<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ProfileActivity" >

    <TextView
        android:id="@+id/about_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_me" />

    <TextView
        android:id="@+id/description_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description_content" />

    <TextView
        android:id="@+id/email_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_content" />

    <TextView
        android:id="@+id/telephone_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telephone_content" />

    <TextView
        android:id="@+id/mobile_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mobile_content" />

    <TextView
        android:id="@+id/location_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_content" />

    <TextView
        android:id="@+id/interests_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/interests_content" />

       <TextView
        android:id="@+id/skills_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skills_content" />
       
          <TextView
        android:id="@+id/twitter_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/twitter_content" />
</LinearLayout>
